major-feat: trend data on the main dashboards (#30)
